基本初步实现。   吐了！

--- a/src/main/resources/static/assets/common.css
+++ b/src/main/resources/static/assets/common.css
@@ -7,7 +7,12 @@ html, body {
         width: 1145px;
     }
 }
-
+.margin-right{
+    margin-right: 10px;
+}
+.margin-left{
+    margin-left: 20px;
+}
 a {
     cursor: pointer;
 }
