--- a/src/main/resources/static/assets/common.css
+++ b/src/main/resources/static/assets/common.css
@@ -13,6 +13,14 @@ html, body {
 .margin-left{
     margin-left: 20px;
 }
+.left{
+    float:left;
+    min-width:150px;
+    padding-top:15px;
+}
+.right{
+    overflow: auto;
+}
 a {
     cursor: pointer;
 }
